testsuite/tests/indexed-types/should_fail/T14887.stderr
T14887.hs:15:1: error: [GHC-87279]
    • The kind of ‘Foo2’ is ill-scoped
        Inferred kind: Foo2 :: forall (a :: k).
                               forall k -> (:~:) @{k} a a -> *
      Note: Specified variables (namely: (a :: k)) always come first.
      Perhaps try this order instead: k (a :: k) (e :: (:~:) @{k} a a)
    • In the type family declaration for ‘Foo2’

